# bob

./: .gitignore  AUTHORS  LICENSE  LICENSE-APACHE.md  LICENSE-CC-BY-NC-SA.md  NOTICE  README-ru.md  README.md  pyproject.toml
.beadloom/: AGENTS.md  README.md  config.yml
.beadloom/_graph/: rules.yml  services.yml
.beads/: config.yaml  issues.jsonl
.claude/: CLAUDE.md
.claude/commands/: checkpoint.md  coordinator.md  dev.md  epic-init.md  review.md  task-init.md  tech-writer.md  templates.md  test.md
.claude/dev-docs/: Beadloom-UX-Issues.md  PRD.md  RFC-VALIDATION-2.md  RFC-VALIDATION.md  RFC.md  ROADMAP.md
.claude/dev-docs/bob-vr/: 3D-VR-Validation.md  Bob-2.5D-PoC.md  Bob-work-PoC.md  DecisionLog.md  RESEARCH-hair-clothing-3d-generation.md  RFC-Proof-of-VR-Concept.md  archive.md  current.md  decisionLog.md  general.md  identity-persistence-plan.md  session-save-promt.md  sessionPrompt.md  validate_depth.py
.claude/dev-docs/bob-vr/validation/: .gitignore  test_clothing.py  test_hair_cards.py  test_mhr.py
docs/: architecture.md
docs/domains/behaviors/: README.md
docs/domains/core/: README.md
docs/domains/genesis/: README.md
docs/domains/llm/: README.md
docs/domains/memory/: README.md
docs/domains/mind/: README.md
docs/domains/security/: README.md
docs/domains/services/: README.md
docs/domains/skills/: README.md
godot/: .gitignore  project.godot
godot/assets/: bob_body_trimesh.glb  hair_cards.glb  pants.glb  shirt.glb
godot/assets/training_data/bob_identity/: bob_3q_left_s43.txt  bob_3q_right_s46.txt  bob_action_s48.txt  bob_back_s45.txt  bob_front_s42.txt  bob_left_profile_s44.txt  (+4 more)
godot/config/: style_guide.yaml
godot/scenes/: main.tscn  parallax_2d.tscn
godot/scripts/: bob_character.gd  bob_placeholder.gd  bob_placeholder.gd.uid  camera_rig.gd  camera_rig.gd.uid  idle_animation.gd  idle_animation.gd.uid  main.gd  main.gd.uid  parallax_scene.gd  procedural_furniture.gd  procedural_room.gd  procedural_room.gd.uid  test_bob_character.gd  test_full_scene.gd  test_glb_import.gd  test_integration.gd  test_shell_fur.gd  test_spring_bone.gd  work_animation.gd
godot/shaders/: outline.gdshader  outline.gdshader.uid  toon.gdshader  toon.gdshader.uid
godot/tools/: diagnose_godot_import.gd  diagnose_godot_import.gd.uid  generate_bob.py  generate_pose.py  inspect_glb.gd  inspect_glb.gd.uid  split_turnaround.py  validate_bob.py
src/bob/: __init__.py
src/bob/api/: __init__.py
src/bob/behaviors/: __init__.py
src/bob/core/: __init__.py
src/bob/genesis/: __init__.py
src/bob/llm/: __init__.py
src/bob/memory/: __init__.py
src/bob/mind/: __init__.py
src/bob/security/: __init__.py
src/bob/services/: __init__.py
src/bob/skills/: __init__.py
tests/: __init__.py  test_smoke.py
